--- a/templates/default/hostextinfo.cfg.erb
+++ b/templates/default/hostextinfo.cfg.erb
@@ -9,3 +9,14 @@ define hostextinfo {
 }
 
 <% end -%>
+
+<% @unmanaged_hosts.each do |host| -%>
+<% unless host["platform"].nil? -%>
+define hostextinfo {
+  host_name <%= node['nagios']['server']['normalize_hostname'] ? host['host_name'].downcase : host['host_name'] %>
+  icon_image <%= host["platform"] %>.png
+  statusmap_image <%= host["platform"] %>.gd2
+}
+
+<% end -%>
+<% end -%>
