--- a/templates/default/knife.rb.erb
+++ b/templates/default/knife.rb.erb
@@ -1,3 +1,3 @@
 # Knife configuration used by Nagios #
 node_name               '<%= node.name %>'
-chef_server_url         '<%= node['chef_client']['server_url'] %>'
+chef_server_url         '<%= node['chef_client']['config']['chef_server_url'] %>'
